--- a/frontend/src/locale/messages.ru.json
+++ b/frontend/src/locale/messages.ru.json
@@ -9,7 +9,8 @@
     },
     "RESUME": {
       "name": "Резюме",
-      "GENERATE_RESUME": "Генерация резюме"
+      "GENERATE_RESUME": "Генерация резюме",
+      "GITHUB_TO_RESUME": "GitHub в резюме"
     },
     "ABOUT": {
       "name": "О сервисе"
@@ -277,7 +278,14 @@
     "VACANCY_INFO": "Информация о вакансии",
     "UPLOAD_COVER_LETTER": "Загрузить сопроводительное письмо",
     "UPLOAD_VACANCY": "Загрузить описание вакансии",
-    "REMOVE_FILE": "Удалить файл"
+    "REMOVE_FILE": "Удалить файл",
+    "ATTACHMENTS": "Вложения файлов",
+    "ATTACHMENTS_HINT": "Прикрепите дополнительные файлы к резюме (портфолио, сертификаты и т.д.)",
+    "ATTACHED_FILES": "Прикрепленные файлы",
+    "FILE_TYPE_RESUME": "Резюме",
+    "FILE_TYPE_PORTFOLIO": "Портфолио",
+    "FILE_TYPE_CERTIFICATE": "Сертификат",
+    "FILE_TYPE_OTHER": "Другое"
   },
   "JOB_PLATFORMS": {
     "TITLE": "Интеграция с платформами",
@@ -404,7 +412,28 @@
     "INVALID_URL": "Неверный формат ссылки",
     "NO_TOKEN": "Требуется авторизация",
     "API_ERROR": "Ошибка API",
-    "PAGE_NOT_EXIST": "Страница, которую вы ищете, не существует."
+    "PAGE_NOT_EXIST": "Страница, которую вы ищете, не существует.",
+    "LOAD_VACANCY": "Ошибка загрузки вакансии",
+    "LOAD_PROFILE": "Ошибка загрузки профиля",
+    "SAVE_PROFILE": "Ошибка сохранения профиля",
+    "GENERATE_RESUME": "Ошибка генерации резюме",
+    "GENERATE_COVER_LETTER": "Ошибка генерации сопроводительного письма",
+    "GENERATE_INTERVIEW_PLAN": "Ошибка генерации плана собеседования",
+    "SEND_APPLICATION": "Ошибка отправки заявки",
+    "UPLOAD_FILE": "Ошибка загрузки файла",
+    "PARSE_FILE": "Ошибка обработки файла",
+    "AI_INIT": "Ошибка инициализации AI провайдеров",
+    "AI_CONFIG": "Ошибка настройки AI",
+    "TOKEN_REFRESH": "Ошибка обновления токена",
+    "LOAD_NOTIFICATIONS": "Ошибка загрузки уведомлений",
+    "CREATE_NOTIFICATION": "Ошибка создания уведомления",
+    "UPDATE_NOTIFICATION": "Ошибка обновления уведомления",
+    "DELETE_NOTIFICATION": "Ошибка удаления уведомления",
+    "LOAD_CONFIG": "Ошибка загрузки конфигурации",
+    "PUBLISH_RESUME": "Ошибка публикации резюме",
+    "AI_RATE_LIMIT": "🔄 Превышен лимит запросов к AI. Подождите немного и попробуйте снова.",
+    "AI_BAD_REQUEST": "❌ Ошибка в запросе к AI. Мы уже работаем над исправлением.",
+    "AI_SERVICE_TEMPORARY": "🤖 Временные проблемы с AI сервисом. Попробуйте позже."
   },
   "SUCCESS": {
     "OPERATION_COMPLETED": "Операция выполнена успешно",
@@ -857,5 +886,6 @@
   "SEND_TO_PLATFORM": "Отправить на платформу",
   "LAST_GENERATED": "Последняя генерация",
   "RESUME_FOR_SENDING": "Резюме для отправки",
-  "SELECT_RESUME": "Выберите резюме"
+  "SELECT_RESUME": "Выберите резюме",
+  "REMOVE": "Удалить"
 }
